--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "token":"NzAzMDAxMzc1MDY3NDcxODc0.XqITNg.1WF8u5X0JNTpiLZDAkv-dK_05aQ"
+    "token":"ODM4NDI5NzE2ODgwNTU2MDgy.YI6-hQ.bF6IDwKuSjTXLYh2TCWg74T-wj0 "
 }
